<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

<modelVersion>4.0.0</modelVersion>
<groupId>io.cryostat</groupId>
<artifactId>cryostat-core</artifactId>
<version>2.19.0-SNAPSHOT</version>
<packaging>jar</packaging>
<name>cryostat-core</name>
<url>http://maven.apache.org</url>

<repositories>
  <repository>
    <id>adopt</id>
    <name>AdoptOpenJDK</name>
    <url>https://adoptopenjdk.jfrog.io/adoptopenjdk/jmc-libs</url>
    <layout>default</layout>
  </repository>
</repositories>

<distributionManagement>
  <repository>
    <id>github</id>
    <name>GitHub Packages</name>
    <url>https://maven.pkg.github.com/cryostatio/cryostat-core</url>
  </repository>
</distributionManagement>

<properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <java.version>11</java.version>
  <maven.compiler.target>${java.version}</maven.compiler.target>
  <maven.compiler.source>${java.version}</maven.compiler.source>
  <jmc.version>7.1.1</jmc.version>

  <org.apache.maven.plugins.compiler.version>3.10.1</org.apache.maven.plugins.compiler.version>
  <org.apache.maven.plugins.surefire.version>3.0.0-M5</org.apache.maven.plugins.surefire.version>
  <org.apache.maven.plugins.site.version>3.12.1</org.apache.maven.plugins.site.version>
  <org.apache.maven.plugins.info.reports.version>3.4.2</org.apache.maven.plugins.info.reports.version>
  <com.mycila.license.maven.plugin.version>4.1</com.mycila.license.maven.plugin.version>

  <org.apache.commons.lang3.version>3.12.0</org.apache.commons.lang3.version>
  <org.apache.commons.codec.version>1.15</org.apache.commons.codec.version>
  <org.apache.commons.io.version>2.11.0</org.apache.commons.io.version>
  <org.apache.commons.text.version>1.10.0</org.apache.commons.text.version>
  <org.jsoup.version>1.15.4</org.jsoup.version>

  <com.github.spotbugs.version>4.7.1</com.github.spotbugs.version>
  <com.github.spotbugs.plugin.version>4.7.3.0</com.github.spotbugs.plugin.version>
  <org.junit.jupiter.version>5.9.2</org.junit.jupiter.version>
  <org.hamcrest.version>2.2</org.hamcrest.version>
  <org.mockito.version>5.1.1</org.mockito.version>
  <org.jacoco.maven.plugin.version>0.8.8</org.jacoco.maven.plugin.version>
  <com.diffplug.spotless.maven.plugin.version>2.33.0</com.diffplug.spotless.maven.plugin.version>
  <org.slf4j.version>1.7.35</org.slf4j.version>
</properties>

<dependencies>
  <dependency>
    <groupId>org.openjdk.jmc</groupId>
    <artifactId>common</artifactId>
    <version>${jmc.version}</version>
  </dependency>
  <dependency>
    <groupId>org.openjdk.jmc</groupId>
    <artifactId>flightrecorder</artifactId>
    <version>${jmc.version}</version>
  </dependency>
  <dependency>
    <groupId>org.openjdk.jmc</groupId>
    <artifactId>flightrecorder.rules</artifactId>
    <version>${jmc.version}</version>
  </dependency>
  <dependency>
    <groupId>org.openjdk.jmc</groupId>
    <artifactId>flightrecorder.rules.jdk</artifactId>
    <version>${jmc.version}</version>
  </dependency>
  <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-lang3</artifactId>
    <version>${org.apache.commons.lang3.version}</version>
  </dependency>
  <dependency>
    <groupId>commons-codec</groupId>
    <artifactId>commons-codec</artifactId>
    <version>${org.apache.commons.codec.version}</version>
  </dependency>
  <dependency>
    <groupId>commons-io</groupId>
    <artifactId>commons-io</artifactId>
    <version>${org.apache.commons.io.version}</version>
  </dependency>
  <dependency>
    <groupId>org.jsoup</groupId>
    <artifactId>jsoup</artifactId>
    <version>${org.jsoup.version}</version>
  </dependency>
  <dependency>
    <groupId>com.github.spotbugs</groupId>
    <artifactId>spotbugs-annotations</artifactId>
    <version>${com.github.spotbugs.version}</version>
    <scope>provided</scope>
  </dependency>
  <dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-jdk14</artifactId>
    <version>${org.slf4j.version}</version>
  </dependency>

  <!-- test deps -->
  <dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-api</artifactId>
    <version>${org.junit.jupiter.version}</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-params</artifactId>
    <version>${org.junit.jupiter.version}</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.hamcrest</groupId>
    <artifactId>hamcrest</artifactId>
    <version>${org.hamcrest.version}</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.mockito</groupId>
    <artifactId>mockito-junit-jupiter</artifactId>
    <version>${org.mockito.version}</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.mockito</groupId>
    <artifactId>mockito-inline</artifactId>
    <version>${org.mockito.version}</version>
    <scope>test</scope>
  </dependency>
  <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-text</artifactId>
    <version>${org.apache.commons.text.version}</version>
    <scope>test</scope>
  </dependency>
</dependencies>

<build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>${org.apache.maven.plugins.compiler.version}</version>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>${org.apache.maven.plugins.surefire.version}</version>
      <configuration>
        <properties>
          <configurationParameters>
            junit.jupiter.execution.parallel.enabled=true
            junit.jupiter.execution.parallel.mode.default=same_thread
            junit.jupiter.execution.parallel.mode.classes.default=concurrent
          </configurationParameters>
        </properties>
      </configuration>
    </plugin>
    <plugin>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-maven-plugin</artifactId>
      <version>${com.github.spotbugs.plugin.version}</version>
      <configuration>
        <onlyAnalyze>io.cryostat.-</onlyAnalyze>
      </configuration>
      <executions>
        <execution>
          <id>spotbugs</id>
          <phase>verify</phase>
          <goals>
            <goal>check</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
    <plugin>
      <groupId>org.jacoco</groupId>
      <artifactId>jacoco-maven-plugin</artifactId>
      <version>${org.jacoco.maven.plugin.version}</version>
      <executions>
        <execution>
          <goals>
            <goal>prepare-agent</goal>
          </goals>
        </execution>
        <execution>
          <id>report</id>
          <phase>verify</phase>
          <goals>
            <goal>report</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
    <plugin>
      <groupId>com.diffplug.spotless</groupId>
      <artifactId>spotless-maven-plugin</artifactId>
      <version>${com.diffplug.spotless.maven.plugin.version}</version>
      <executions>
        <execution>
          <id>spotless</id>
          <phase>verify</phase>
          <goals>
            <goal>check</goal>
          </goals>
        </execution>
      </executions>
      <configuration>
        <java>
          <excludes>
            <exclude>src/main/java/org/openjdk/jmc/**</exclude>
          </excludes>
          <googleJavaFormat>
            <version>1.15.0</version>
            <style>AOSP</style>
            <reflowLongStrings>true</reflowLongStrings>
          </googleJavaFormat>
          <trimTrailingWhitespace/>
          <endWithNewline/>
          <importOrder>
            <order>java,javax,org.openjdk.jmc,io.cryostat,</order>
          </importOrder>
          <removeUnusedImports/>
        </java>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-site-plugin</artifactId>
      <version>${org.apache.maven.plugins.site.version}</version>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-project-info-reports-plugin</artifactId>
      <version>${org.apache.maven.plugins.info.reports.version}</version>
    </plugin>
    <plugin>
      <groupId>com.mycila</groupId>
      <artifactId>license-maven-plugin</artifactId>
      <version>${com.mycila.license.maven.plugin.version}</version>
      <configuration>
        <licenseSets>
          <licenseSet>
            <header>LICENSE</header>
            <includes>
              <include>src/main/**/*.java</include>
              <include>src/test/**/*.java</include>
            </includes>
            <excludes>
              <exclude>src/main/java/org/openjdk/jmc/**</exclude>
            </excludes>
          </licenseSet>
        </licenseSets>
      </configuration>
      <executions>
        <execution>
          <id>update-license</id>
          <goals>
            <goal>check</goal>
          </goals>
          <phase>process-sources</phase>
        </execution>
      </executions>
    </plugin>
  </plugins>
</build>

<reporting>
  <plugins>
    <plugin>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-maven-plugin</artifactId>
      <version>${com.github.spotbugs.plugin.version}</version>
    </plugin>
    <plugin>
      <groupId>org.jacoco</groupId>
      <artifactId>jacoco-maven-plugin</artifactId>
      <version>${org.jacoco.maven.plugin.version}</version>
      <configuration>
        <excludes>
          <exclude>io/cryostat/core/jmc/**/*</exclude>
          <exclude>org/openjdk/jmc/**/*</exclude>
        </excludes>
      </configuration>
      <reportSets>
        <reportSet>
          <reports>
            <report>report</report>
          </reports>
        </reportSet>
      </reportSets>
    </plugin>
  </plugins>
</reporting>

</project>
